deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-xml-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-xml
  template:
    metadata:
      labels:
        app: nginx-xml
    spec:
      containers:
      - name: nginx
        image: youracr.azurecr.io/nginx-custom:latest
        volumeMounts:
        - name: static-files
          mountPath: /usr/share/nginx/html
      volumes:
      - name: static-files
        persistentVolumeClaim:
          claimName: azure-file-pvc
