service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx-namespace
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80 # External Port
    targetPort: 80 # Container Port
  type: LoadBalancer # Exposes the service publicly
