svc-ghco.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001  # You can specify a port in the range 30000-32767 or let Kubernetes assign one automatically
